git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3743 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -24,7 +24,7 @@
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
-    Kuali is a growing community of universities, colleges and commercial firms partnering 
+    Kuali is a growing community of universities, colleges, and commercial firms partnering 
     to build and sustain open-source software for higher education, by higher education.
   </description>
   <licenses>
