git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3752 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-common/pom.xml
+++ b/kuali-common/pom.xml
@@ -30,7 +30,8 @@
   <name>Kuali Common</name>
   <description>
    This pom contains Maven configuration (plugins, profiles, executions, etc) that
-   assist with building, testing, publishing, and releasing Kuali Foundation software. 
+   assists with the building, testing, publishing, and releasing of Kuali Foundation 
+   software. 
   </description>
   <developers>
     <developer>
