--- a/kuali-common/pom.xml
+++ b/kuali-common/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.kuali.pom</groupId>
     <artifactId>kuali</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
   </parent>
   <groupId>org.kuali.pom</groupId>
   <artifactId>kuali-common</artifactId>
