--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>18</version>
+    <version>1.0.4</version>
   </parent>
   <groupId>org.kuali.deploy</groupId>
   <artifactId>deploy</artifactId>
@@ -63,13 +62,13 @@
                     <regex>^\S+$</regex>
                     <regexMessage>You must provide a version</regexMessage>
                   </requireProperty>
-                  <!-- 
-                  <requireProperty>
+                  <!--
+                    <requireProperty>
                     <property>dp.file</property>
                     <message>You must provide a file</message>
                     <regex>^\S+$</regex>
                     <regexMessage>You must provide a file</regexMessage>
-                  </requireProperty> -->
+                    </requireProperty> -->
                 </rules>
                 <fail>true</fail>
               </configuration>
