--- a/kuali-beanstalk/pom.xml
+++ b/kuali-beanstalk/pom.xml
@@ -4,9 +4,9 @@
   <parent>
     <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.4</version>
   </parent>
-  <groupId>org.kuali.deploy</groupId>
+  <groupId>org.kuali.common.deploy</groupId>
   <artifactId>kuali-beanstalk</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
