--- a/ec2admin/pom.xml
+++ b/ec2admin/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>kuali-common</artifactId>
     <version>1.0.4</version>
   </parent>
-  <groupId>org.kuali.ec2</groupId>
+  <groupId>org.kuali.common.ec2</groupId>
   <artifactId>ec2admin</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
