--- a/deploy-artifact/pom.xml
+++ b/deploy-artifact/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>kuali-common</artifactId>
     <version>1.0.4</version>
   </parent>
-  <groupId>org.kuali.deploy</groupId>
+  <groupId>org.kuali.common.deploy</groupId>
   <artifactId>deploy</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
