--- a/maven-cloudfront-plugin/pom.xml
+++ b/maven-cloudfront-plugin/pom.xml
@@ -26,7 +26,7 @@
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-cloudfront-plugin</artifactId>
   <packaging>maven-plugin</packaging>
-  <version>1.1.3</version>
+  <version>1.1.4-SNAPSHOT</version>
   <name>Maven Cloud Front Plugin</name>
   <description>This plugin integrates maven site generation with Amazon Cloud Front</description>
   <url>http://${kuali.site.hostname}/maven/plugins/${project.artifactId}/${project.version}/</url>
@@ -212,8 +212,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-cloudfront-plugin-1.1.3</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-cloudfront-plugin-1.1.3</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-cloudfront-plugin-1.1.3</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-cloudfront-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-cloudfront-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-cloudfront-plugin</url>
   </scm>
 </project>
