--- a/kuali/pom.xml
+++ b/kuali/pom.xml
@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali.pom</groupId>
   <artifactId>kuali</artifactId>
-  <version>1.0.4</version>
+  <version>1.0.5-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -181,9 +181,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-1.0.4</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-1.0.4</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-1.0.4</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/kuali</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/kuali</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/kuali</url>
   </scm>
   <build>
     <extensions>
