Disable unit tests for the release process
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3855 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sql-maven-plugin/pom.xml
+++ b/sql-maven-plugin/pom.xml
@@ -199,6 +199,7 @@
   </profiles>
 
   <properties>
+    <kuali.release.arguments>-DskipTests</kuali.release.arguments>
     <mavenVersion>2.0.6</mavenVersion>
     <kuali.compile.source>1.5</kuali.compile.source>
     <kuali.compile.target>1.5</kuali.compile.target>
