--- a/maven-http-plugin/pom.xml
+++ b/maven-http-plugin/pom.xml
@@ -2,9 +2,9 @@
 
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>1.0.6</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-http-plugin</artifactId>
@@ -13,7 +13,7 @@
   <name>Maven HTTP Plugin</name>
   <description>Tools for allowing Maven to interact with the HTTP protocol</description>
   <properties>
-    <kuali.slf4j.version>1.6.1</kuali.slf4j.version>
+    <kuali.slf4j.version>1.6.4</kuali.slf4j.version>
   </properties>
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-http-plugin</connection>
