--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -18,7 +18,7 @@
     <version>1.0.4</version>
   </parent>
   <description>Configuration Management Tools</description>
-  <groupId>org.kuali.cm</groupId>
+  <groupId>org.kuali.foundation.cm</groupId>
   <artifactId>cm-tools</artifactId>
   <version>1.1.3-SNAPSHOT</version>
   <properties>
