--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -30,7 +30,7 @@
   <version>1.1.3-SNAPSHOT</version>
 
   <name>Kuali Site Skin</name>
-  <description>Kuali Site Skin</description>
+  <description>The project is a Maven skin with Kuali Foundation branding</description>
 
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</connection>
