--- a/maven-kuali-skin/pom.xml
+++ b/maven-kuali-skin/pom.xml
@@ -27,15 +27,15 @@
 
   <groupId>org.kuali.maven.skins</groupId>
   <artifactId>maven-kuali-skin</artifactId>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.3</version>
 
   <name>Kuali Site Skin</name>
   <description>The project is a Maven skin with Kuali Foundation branding</description>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-kuali-skin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.1.3</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.1.3</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-kuali-skin-1.1.3</url>
   </scm>
 
 </project>
