--- a/jenkins-maven-plugin/pom.xml
+++ b/jenkins-maven-plugin/pom.xml
@@ -27,9 +27,9 @@
       <version>3.0.3</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.ant</groupId>
+      <groupId>ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.8.2</version>
+      <version>1.6.5</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
