git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3905 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-dns/pom.xml
+++ b/kuali-dns/pom.xml
@@ -10,7 +10,8 @@
   <artifactId>kuali-dns</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>CM Tools</name>
+  <name>DNS Plugin</name>
+  <description>This project provides Kuali specific configuration for the maven-dnsme-plugin</description>
   <developers>
     <developer>
       <id>jcaddel</id>
