--- a/kuali-sql/pom.xml
+++ b/kuali-sql/pom.xml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2007-2009 The Kuali Foundation Licensed under the Educational
-  Community License, Version 2.0 (the "License"); you may not use this file
-  except in compliance with the License. You may obtain a copy of the License
-  at http://www.opensource.org/licenses/ecl2.php Unless required by applicable
-  law or agreed to in writing, software distributed under the License is distributed
-  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
-  express or implied. See the License for the specific language governing permissions
-  and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <name>Kuali SQL</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.kuali</groupId>
+    <groupId>org.kuali.pom</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>18</version>
+    <version>1.0.6</version>
   </parent>
   <description>General purpose library of SQL statements</description>
   <groupId>org.kuali.db.sql</groupId>
@@ -34,7 +26,7 @@
       <name>Jeff Caddel</name>
       <organization>rSmart</organization>
       <timezone>-7</timezone>
-      <email>jcaddel(at)kuali.org</email>
+      <email>jcaddel@kuali.org</email>
     </developer>
   </developers>
 </project>
