git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3907 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kuali-sql/pom.xml
+++ b/kuali-sql/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>kuali-common</artifactId>
     <version>1.0.6</version>
   </parent>
-  <description>General purpose library of SQL statements</description>
+  <description>General purpose library of SQL statements useful for Kuali projects</description>
   <groupId>org.kuali.db.sql</groupId>
   <artifactId>kuali-sql</artifactId>
   <version>1.0.2-SNAPSHOT</version>
