--- a/extractor-maven-plugin/pom.xml
+++ b/extractor-maven-plugin/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.kuali.maven.common</groupId>
       <artifactId>maven-kuali-common</artifactId>
-      <version>1.1.2-SNAPSHOT</version>
+      <version>1.1.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
