--- a/jenkins-maven-plugin/pom.xml
+++ b/jenkins-maven-plugin/pom.xml
@@ -22,6 +22,11 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>org.kuali.maven.common</groupId>
+      <artifactId>maven-kuali-common</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>3.0.3</version>
