--- a/jenkins-maven-plugin/pom.xml
+++ b/jenkins-maven-plugin/pom.xml
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.kuali.maven.common</groupId>
       <artifactId>maven-kuali-common</artifactId>
-      <version>1.1.2</version>
+      <version>1.1.3-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
