--- a/jenkins-maven-plugin/pom.xml
+++ b/jenkins-maven-plugin/pom.xml
@@ -20,6 +20,14 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/jenkins-maven-plugin</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/trunk/jenkins-maven-plugin</url>
   </scm>
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
   <dependencies>
     <dependency>
       <groupId>org.kuali.maven.common</groupId>
