--- a/extractor-maven-plugin/pom.xml
+++ b/extractor-maven-plugin/pom.xml
@@ -42,6 +42,17 @@
     <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/extractor-maven-plugin</developerConnection>
     <url>http://svn.kuali.org/repos/foundation/trunk/extractor-maven-plugin</url>
   </scm>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.kuali.maven.plugins</groupId>
+          <artifactId>jenkins-maven-plugin</artifactId>
+          <version>1.0.0-SNAPSHOT</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <developers>
     <developer>
       <id>jcaddel</id>
