git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3970 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/jenkins-maven-plugin/src/main/resources/org/kuali/jenkins/jenkins.properties
+++ b/jenkins-maven-plugin/src/main/resources/org/kuali/jenkins/jenkins.properties
@@ -8,7 +8,7 @@ jenkins.job.name=${jenkins.project.artifactId}-${jenkins.project.majorVersion}-$
 jenkins.job.input.file=target/classes/org/kuali/cm/jenkins/jobs/templates/jenkins.xml
 jenkins.job.output.file=target/${jenkins.job.name}-config.xml
 
-# This is provided in the pom's ci managment section
+# This is provided in the pom's ci management section
 # ${project.ciManagment.url}
 # jenkins.server=http://ci.fn.kuali.org/
 # Wait for the job to finish before continuing (not working in Jenkins 1.440)
